# Space_Invaders

./: .travis.yml  CMakeLists.txt  Game.cpp  Game.h  README.md  compile.sh  level.json  main.cpp  run.sh
Doxygen/: dox
Doxygen/html/: AFLDriverTest_8cpp_source.html  AbsNegAndConstant64Test_8cpp_source.html  AbsNegAndConstantTest_8cpp_source.html  AccumulateAllocationsTest_8cpp_source.html  AlienShipController_8cpp_source.html  AlienShipController_8h_source.html  AlienShipModel_8cpp_source.html  AlienShipModel_8h_source.html  AlienShipView_8cpp_source.html  AlienShipView_8h_source.html  AliveController_8cpp_source.html  AliveController_8h_source.html  AliveModel_8cpp_source.html  AliveModel_8h_source.html  BufferOverflowOnInput_8cpp_source.html  BulletController_8cpp_source.html  BulletController_8h_source.html  BulletModel_8cpp_source.html  BulletModel_8h_source.html  BulletView_8cpp_source.html  BulletView_8h_source.html  CMakeCCompilerId_8c_source.html  CMakeCXXCompilerId_8cpp_source.html  CallerCalleeTest_8cpp_source.html  CollidableController_8cpp_source.html  CollidableController_8h_source.html  Controllable_8h_source.html  ControllerAbstract_8cpp_source.html  ControllerAbstract_8h_source.html  CounterTest_8cpp_source.html  CustomCrossOverTest_8cpp_source.html  CustomMutatorTest_8cpp_source.html  DSO1_8cpp_source.html  DSO2_8cpp_source.html  DSOTestExtra_8cpp_source.html  DSOTestMain_8cpp_source.html  DivTest_8cpp_source.html  EmptyTest_8cpp_source.html  EnemyController_8cpp_source.html  EnemyController_8h_source.html  (+1058 more)
Doxygen/latex/: annotated.tex  autotoc_md0.tex  classAlienShipController.eps  classAlienShipController.tex  classAlienShipModel.eps  classAlienShipModel.tex  classAlienShipView.eps  classAlienShipView.tex  classControllable.eps  classControllable.tex  classControllerAbstract.eps  classControllerAbstract.tex  classEntityController.eps  classEntityController.tex  classEntity_1_1AlienShipController.eps  classEntity_1_1AlienShipController.tex  classEntity_1_1AlienShipModel.eps  classEntity_1_1AlienShipModel.tex  classEntity_1_1AlienShipView.eps  classEntity_1_1AlienShipView.tex  classEntity_1_1AliveController.eps  classEntity_1_1AliveController.tex  classEntity_1_1AliveModel.eps  classEntity_1_1AliveModel.tex  classEntity_1_1BulletController.eps  classEntity_1_1BulletController.tex  classEntity_1_1BulletView.eps  (+381 more)
Entity/: EntityController.cpp  EntityController.h  EntityModel.cpp  EntityModel.h  EntityView.cpp  EntityView.h
Games/: Game1.json
MVCAbstract/: Controllable.h  ControllerAbstract.cpp  ControllerAbstract.h  ModelAbstract.cpp  ModelAbstract.h  Subject.cpp  Subject.h  ViewAbstract.cpp  ViewAbstract.h
Observer/: Observer.h  Subject.cpp  Subject.h
Utils/: Object.h  ObjectMaker.cpp  ObjectMaker.h  ObjectManager.cpp  ObjectManager.h  StopWatch.cpp  StopWatch.h  Transformation.cpp  Transformation.h  Vector2D.h
(+210 files in other folders)
